--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
   "scripts": {
   },
   "publishConfig": {
-    "license": {
-      "exclude": [
-        "lib"
-      ]
-    }
+    "registry": "https://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
