--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "hrduration",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Simple wrapper around process.hrtime to get duration.",
   "main": "index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
   },
